# MCP_PreQualification

./: .env.sample  .gitignore  README.md  pyproject.toml
deployment/: Dockerfile
deployment/openshift/: deployment.yaml  route.yaml  service.yaml
scripts/: warm_policy_index.py
src/mortgage_mcp/: __init__.py  main.py  run.py
src/mortgage_mcp/common/: __init__.py  settings.py
src/mortgage_mcp/common/calc/: __init__.py  dti.py  ltv.py  payment.py
src/mortgage_mcp/common/errors/: app_errors.py
src/mortgage_mcp/common/logging/: structured_logger.py
src/mortgage_mcp/common/schemas/: __init__.py  primitives.py
src/mortgage_mcp/common/types/: __init__.py  enums.py
src/mortgage_mcp/tools/: __init__.py
src/mortgage_mcp/tools/calculate_dti/: __init__.py  schemas.py  service.py  tool.py
src/mortgage_mcp/tools/calculate_ltv/: __init__.py  schemas.py  service.py  tool.py
src/mortgage_mcp/tools/calculate_reserves/: __init__.py  schemas.py  service.py  tool.py
src/mortgage_mcp/tools/check_borrower_eligibility/: __init__.py  schemas.py  tool.py  (+1 more)
src/mortgage_mcp/transport/: __init__.py  tool_registry.py
streamlit_mcp_ui/: .env.sample  .gitignore  Home.py  README.md  mcp_client.py  pyproject.toml  requirements.txt  smoke_test_mcp_from_ui.py  ui_helpers.py
streamlit_mcp_ui/.streamlit/: config.toml
streamlit_mcp_ui/assets/: app.css
streamlit_mcp_ui/pages/: 10_compare_loan_programs.py  11_generate_prequal_summary.py  1_calculate_dti.py  2_calculate_ltv.py  3_check_borrower_eligibility.py  4_recommend_loan_products.py  5_search_mortgage_policy.py  6_explain_eligibility_decision.py  7_estimate_monthly_payment.py  8_calculate_reserves.py  9_max_affordable_loan_amount.py
tests/: test_mortgage_tools.py  test_new_mortgage_tools.py  test_payment_calc.py
(+61 files in other folders)
