# MCP references: (build metadata — documents dependencies for all MCP tools in this repo)
# Purpose: Declares Python version, dependencies, and the installable `mortgage_mcp` package.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-mcp-server"
version = "0.1.0"
description = "Enterprise-style Mortgage Eligibility & Prequalification MCP server (Streamable HTTP)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "mcp>=1.21.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.2",
  "numpy>=1.26.0",
  "faiss-cpu>=1.9.0",
  "httpx>=0.28.0",
]

[project.scripts]
mortgage-mcp = "mortgage_mcp.run:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
